[package]
name = "wave-function-collapse"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
